[project]
name = "frame-forge"
version = "1.3.5"
description = "CLI to offload image generation to"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "awsmfunc@git+https://github.com/OpusGang/awsmfunc.git",
    "numpy>=1.26.2",
    "vapoursynth-portable==65",
]

[project.optional-dependencies]
build = ["pyinstaller-hooks-contrib>=2025.1", "pyinstaller>=6.9.0"]

[tool.ruff]
line-length = 88

[tool.basedpyright]
include = ["frame_forge.py", "frame_forge"]
# ignore = [""]
typeCheckingMode = "standard" # "off", "basic", "standard", "strict", "recommended" or "all"
